# grpg

./: .gitignore  create.cypher  d  docker-compose.yaml  inf.tex
api/: .editorconfig  .gitignore  Cargo.toml  api_call.json  dados.json  docker-compose.yaml  graph.yaml  kuzudyn.sh  main.py  requirements.txt  update.sh
api/migration/: Cargo.toml
api/migration/src/: m20220101_000001_initial_schema.rs
api/src/: db.rs  endpoints.rs  main.rs
api/src/db/: base.rs  graph.rs  graphdb.rs  models.rs  reldb.rs
api/src/db/base/: setting_manager.rs  settings.rs  tables.rs  user_settings_manager.rs  user_workspaces_manager.rs  users.rs  workspace_manager.rs  workspaces.rs
api/src/db/base/entities/: mod.rs  prelude.rs  user.rs  workspace.rs
api/src/db/graph/: nodes.rs  predicates.rs  table.rs  triples.rs
api/src/db/graphdb/: nodes.rs  predicates.rs  table.rs  triples.rs
api/src/db/reldb/: tables.rs  user_workspaces_manager.rs  users.rs  workspace_manager.rs  workspaces.rs
api/src/db/reldb/entities/: mod.rs  prelude.rs  user.rs  workspace.rs
api/src/endpoints/: hooks.rs  nodes.rs  predicates.rs  prelude.rs  settings.rs  table.rs  triples.rs  users.rs  workspaces.rs
client/: .gitignore  package.json
client/app/: app.css  root.tsx  routes.ts
client/app/components/: app-sidebar.tsx  combo-box.tsx  delete-table-dialog.tsx  nodes-combo-box.tsx  predicates-combo-box.tsx  tables-combo-box.tsx
client/app/hooks/: queries.ts
client/app/layouts/: sidebar.tsx
client/app/routes/: data-table-column-header.tsx  home.tsx  new-column-dialog.tsx  node-badge-add.tsx  (+8 more)
(+11 files in other folders)
