[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
env_logger = "0.11.8"
hex = "0.4.3"
hmac = "0.12.1"
kuzu = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.28"
serde_json = "1.0.141"
